--- a/sprava_style.css
+++ b/sprava_style.css
@@ -129,49 +129,66 @@ body{
 }
 
 .nav_bar{
+    display: flex;
+    flex-direction: row;
+    height: 64px;
     background-color: #00A3FF;
-    display: inline-flex;
-    height: 59px;
-    color:white
+    color:white;
+    width:100%;
 }
 
-.nav_bar > img{
+.nav_gap{
     display: flex;
-    padding-left:325px;
+    margin-left: 280px;
+}
+
+.nav_wrap{
+    display: flex;
+    align-items: center;
+    gap:20px;
+}
+
+.nav_gap > img{
+    filter: invert();
     max-width: 40px;
     max-height: auto;
-    filter: invert();
-    cursor: pointer;
+    margin-right: 40px;
+    margin-left:3em
 }
 
 .nav1{
-    padding-left:42px;
-    padding-top:19px;
-    font-size:20px;
-    font-weight: 700;
+    font-weight: 600;
+    font-size: 24px;
+    line-height: 28.13px;
+    width: 10.4em;
 }
 
 .nav2{
-    padding-left:20px;
-    padding-top:12px;
-    font-size: 30px;
     font-weight: 300;
+    text-align: center;
+    font-size:35px;
+    line-height: 29.05px;
 }
 
 .nav3{
-    padding-left:20px;
-    padding-top:20px;
-    font-size:20px;
-    font-weight: 300;
+    font-size: 24px;
+    line-height: 28.13px;
+    width: 11em;
 }
 
-.nav_bar > button{
-    background-color: #00A3FF;
+.button_div{
+    display: flex;
+    flex-direction: row-reverse;
+    width: 100em;
+}
+
+.button_div > button{
     border: 0px;
-    color: white;
-    padding-left:570px;
-    cursor: pointer;
-    font-weight: 700;
+    border-radius: 4px;
+    background-color: #00A3FF;
+    color:white;
+    display: flex;
+    align-items: center;
 }
 
 .main{
@@ -234,7 +251,7 @@ body{
 
 .button_pridat{
     position: absolute;
-    margin-left:48.5vw;
+    margin-left:58.5em;
     border: 0px;
     background-color:#00A3FF;
     border-radius:4px;
