--- a/jedalen_style.css
+++ b/jedalen_style.css
@@ -210,6 +210,7 @@ body{
     padding:10px;
     box-shadow: 1px 2px 4px 0px #E0E0E0;
     margin-top: 20px;
+    flex-basis: 1000px;
 }
 
 .card1 > img,.card2 > img,.card3 > img,.card4 > img,.card5 > img,.card6 > img{
