--- a/navbarcss.css
+++ b/navbarcss.css
@@ -153,8 +153,7 @@ body{
     max-width: 40px;
     max-height: auto;
     margin-right: 40px;
-    margin-left:3em;
-    cursor:pointer;
+    margin-left:3em
 }
 
 .nav1{
@@ -190,139 +189,4 @@ body{
     color:white;
     display: flex;
     align-items: center;
-    cursor: pointer;
-}
-
-.main{
-    width:900px;
-    padding-left:350px;
-    padding-top:35px;
-}
-
-.header{
-    font-size:36px;
-    font-weight: 400;
-    line-height: 42.19px;
-}
-
-.desc{
-    color:#00000080;
-    font-size:16px;
-    font-weight: 400;
-    line-height: 18.75px;
-    padding-top:14px;
-    margin-bottom:15px;
-}
-
-.select_meno{
-    display: flex;
-    border: 1px solid #0000003B;
-    border-radius: 4px;
-    width: 120px;
-    height:43px;
-    color: #000000B2;
-    font-size:12px;
-    padding-top:5px;
-}
-
-.meno{
-    position: fixed;
-    font-size: 7px;
-    color: #00000066;
-    margin-top:6px;
-    margin-left:0.6em;
-}
-
-.select_datum{
-    display: flex;
-    border: 1px solid #0000003B;
-    border-radius: 4px;
-    width: 120px;
-    height:43px;
-    color: #000000B2;
-    font-size:12px;
-    padding-top:5px;
-    margin-left:15px;
-}
-
-.datum{
-    position: fixed;
-    font-size: 7px;
-    color: #00000066;
-    margin-top:6px;
-    margin-left:19em;
-}
-
-.button_zrusit{
-    display: flex;
-    align-items: flex-end;
-    border: 0px;
-    background-color: #FA5959;
-    border-radius:4px;
-    padding:10px;
-    color:white;
-    font-size: 12px;
-    width:95px;
-    cursor:pointer
-}
-
-.button_ulozit{
-    display: flex;
-    border: 0px;
-    background-color:#00A3FF;
-    border-radius:4px;
-    padding:10px;
-    color:white;
-    font-size: 12px;
-    width:95px;
-    cursor: pointer;
-}
-
-td > button{
-    background-color: #00A3FF;
-    border: 0px;
-    border-radius: 4px;
-    color:white;
-    margin:0 auto;
-    margin-left:10px ;
-    padding:10px;
-    height: 34px;
-    cursor: pointer;
-}
-
-table,th,td{
-    border: 1px solid #5B5B5B;
-    border-collapse: collapse;
-    margin-top:20px;
-    width:74vw; 
-    height:5vh;
-}
-
-td{
-    font-size: 12px;
-    width:200px;
-    font-weight: 400;
-    line-height: 130%;
-}
-
-.name{
-    justify-content: left;
-}
-
-.desiata{
-    margin-left:6.25em;
-}
-
-.main_options{
-    display: flex;
-    flex-direction: row;
-    width: 74vw;
-}
-
-.main_buttons{
-    display: flex;
-    flex-direction: row-reverse;
-    width: 55em;;
-    align-items: center;
-    gap:16px;
 }
