--- a/prihlasenie_style.css
+++ b/prihlasenie_style.css
@@ -5,23 +5,24 @@ body{
 
 .nav_bar{
     background-color: #00A3FF;
-    position:fixed;
+    display: flex;
     width:100vw;
     height: 6.3vh;
 }
 
-.menu_icon{
-    position: fixed;
-    padding-top:2.1vh;
-    padding-left:2.5vh;
+.nav_bar > img{
+    width: 30px;
+    margin-left:20px;
+    cursor: pointer;
+    filter: invert();
 } 
 
 .nav_text{
-    position:absolute;
+    display: flex;
     color:white;
     font-size:2.5vh;
-    padding-left: 7vw;
-    margin-top:1.8vh;
+    padding-left:35px;
+    align-items: center;
     font-weight:300;
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
