--- a/vykazy_style.css
+++ b/vykazy_style.css
@@ -219,7 +219,7 @@ body{
     padding:16px;
     border-radius: 4px; 
     box-shadow: 0px 4px 4px 0px #00000040;
-    width: 71vw;
+    width: 94%;
     height: 80vh;
 }
 
